syntax = "proto3";
package osmosis.gamm.twap.v1beta1;

import "gogoproto/gogo.proto";
import "osmosis/twap/v1beta1/twap_record.proto";

import "cosmos/base/v1beta1/coin.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/osmosis-labs/osmosis/v10/x/twap/client/grpc";

service Query {
  rpc GetArithmeticTwap(GetArithmeticTwapRequest)
      returns (GetArithmeticTwapResponse) {
    option (google.api.http).get = "/osmosis/gamm/v1beta1/pools";
  }
}

message GetArithmeticTwapRequest {
  uint64 pool_id = 1;
  string base_asset = 2;
  string quote_asset = 3;
  string start_time = 4;
  string end_time = 5;
}
message GetArithmeticTwapResponse {
  string arithmetic_twap = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"arithmetic_twap\"",
    (gogoproto.nullable) = false
  ];
}
